# bubble-grader

./: .env.example  .gitignore  pyproject.toml
data/scoring/: act_1572cpre_triangular_snowflakes.test.json  act_a09_albino_redwoods.test.json  act_a10_ukelele_life.test.json  act_b04_sliding_stones.test.json  act_c01_mouthful_of_music.test.json  act_d03_december2020.test.json  act_d05_april2021.test.json  act_d06_here_comes_the_sun.test.json  act_e23_december2021.test.json  act_e25_april2022.test.json  act_e26_june2022.test.json  act_f07_kings_space_bug.test.json  act_f11_april2023.test.json  act_f12_june2023.test.json  act_g01_powwows.test.json  act_g19_april2024.test.json  act_g20_june2024.test.json  act_h11_house_finds_a_new_home.test.json  act_new_format_manta_rays.test.json  act_new_format_mouthful_of_music.test.json  act_snow_big_deal.test.json  act_z08_citizen_scientist.test.json  act_z14_february2025.test.json  act_z15_april2019.test.json  act_z18_april2023.test.json  form_h31.test.json  form_z04.test.json
data/sheets/: act_sheet.template.json  act_sheet_new.template.json
src/bubble_grader/: act_sheet.py  classroom.py  cli.py  config.py  db.py  db_backend.py  drive.py  extraction.py  feature_match.py  feedback.py  gmail.py  google_api.py  google_auth.py  omr.py  passages.py  scoring.py  server.py  sheet.py  submissions.py  version_check.py
src/bubble_grader/templates/: assignment.html  base.html  course.html  dashboard.html  index.html  new_assignment.html  roster.html  student_course_detail.html  student_detail.html  tests.html
