[project]
name = "bubble-grader"
version = "0.1.0"
description = "Bubble-sheet OCR + Google Classroom grading pipeline"
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.1",
    "cryptography>=48.0.0",
    "fastapi>=0.136.3",
    "google-api-python-client>=2.197.0",
    "google-auth>=2.53.0",
    "google-auth-oauthlib>=1.4.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pypdf>=6.12.2",
    "pypdfium2>=5.9.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.30",
    "uvicorn[standard]>=0.48.0",
]

[project.scripts]
bubble-grader = "bubble_grader.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bubble_grader"]
